--- a/config_sample.env
+++ b/config_sample.env
@@ -4,6 +4,7 @@ BOT_TOKEN = ""                              # Require restart after changing it 
 OWNER_ID = ""                               # Require restart after changing it while bot running
 TELEGRAM_API = ""                           # Require restart after changing it while bot running
 TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+DATABASE_URL = ""                           # Require restart after changing it while bot running
 
 # Gdrive config
 GDRIVE_ID = ""
