add limitation to config sample

--- a/config_sample.env
+++ b/config_sample.env
@@ -23,7 +23,17 @@ FSUB_IDS = ""
 MEDIA_GROUP = ""
 LEECH_DUMP_ID = ""
 MIRROR_LOG_ID = ""
+DELETE_LINKS = ""
 
 # Git config
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
+
+# Bot limit
+BOT_MAX_TASKS = ""
+CLONE_LIMIT = ""
+GDRIVE_LIMIT = ""
+LEECH_LIMIT = ""
+MEGA_LIMIT = ""
+TORRENT_LIMIT = ""
+YTDLP_LIMIT = ""
